Move projects into a collection.
It seems that, in my absence, Jekyll has finally included support for
collections outside of blog posts.  I have therefore moved my portfolio
into a separate collection to make room for a blog.

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,7 @@
 title: Philip Pavlick
 description: Philip Pavlick's Personal Landing Page
+
+collections:
+  projects:
+    output: true
+    permalink: /:collection/:title
