Attempt to fix project sorting.
Project files now use file name rather than title for permalinks because
that doesn't seem to %@#ing work for some reason, and they are sorted by
their `update` value instead.

--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,5 @@ description: Philip Pavlick's Personal Landing Page
 collections:
   projects:
     output: true
-    permalink: /:collection/:title
+    permalink: /:collection/:name
+    sort_by: update
